// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentHeader Renders CommentHeader with non-zero comment count 1`] = `
<div
  className="container"
>
  <h4>
    1,000
     Comments
  </h4>
  <Button
    as="button"
    basic={true}
    compact={true}
    icon={true}
    labelPosition="left"
  >
    <Icon
      as="i"
      name="align left"
    />
    Sort By
  </Button>
</div>
`;

exports[`CommentHeader Renders CommentHeader with zero comment count 1`] = `
<div
  className="container"
>
  <h4>
    0
     Comments
  </h4>
  <Button
    as="button"
    basic={true}
    compact={true}
    icon={true}
    labelPosition="left"
  >
    <Icon
      as="i"
      name="align left"
    />
    Sort By
  </Button>
</div>
`;
